texto_Abejas_arañas

--- a/pages/Abejas.html
+++ b/pages/Abejas.html
@@ -57,24 +57,24 @@
                         <img class="img-fluid" src="../images/abejadx.jpg" alt="una imagen de una abeja">
                     </div>
                     <div class="col-5abeja col-sm-4"> 
-                        <p><h2 class="textodescrip1">esta es una foto de una abeja que me parecio fachera hagamos como que el texto es mas grande y queda con la imagen de la abeja</h2></p>
+                        <p><h2 class="textodescrip1">Hay muchas más especies que aún no han sido descritas. Se las encuentra en todos los continentes, excepto en la Antártida. Están en todos los hábitats donde hay plantas con flores (angiospermas). Están adaptadas para alimentarse de polen y néctar, usando el primero fundamentalmente como alimento para las larvas y el segundo como material energético. La especie más conocida es la abeja doméstica (Apis mellifera), a veces simplemente llamada “abeja”; esta especie es un insecto social que vive en enjambres formados por tres clases de individuos: reina, obreras y zánganos; sin embargo, la mayoría de las especies de abejas son solitarias, es decir, que no forman enjambres</h2></p>
                     </div>
             </div>
             <!-- miel de abeja -->
             <h2 class="titulobicho1"> Miel</h2>
-            <h2 class="titulobicho2"> La miel es muy buena banco mucho, inserte mas texto aca yo que se</h2>
+            <h2 class="titulobicho2"> La miel es utilizada desde hace miles de años en todo el mundo, ya sea como saborizante de brebajes, alimento o medicamento. </h2>
             <div class="row justify-content-center">
-                <div class="col-5abeja col-sm-4"><p><h2 class="textodescrip1">esta es una foto de miel que me parecio bonita, lo mismo que con la foto de abeja, hagamos de cuenta la tipicia</h2></p></div>
+                <div class="col-5abeja col-sm-4"><p><h2 class="textodescrip1">La miel es un fluido muy dulce y viscoso producido por abejas del género Apis, principalmente la abeja doméstica, a partir del néctar de las flores o de secreciones de partes vivas de plantas o de excreciones de insectos chupadores de plantas (áfidos). Estas sustancias son recogidas por las abejas, luego transformadas al combinarlas con sustancias propias, depositadas, deshidratadas y almacenadas en los panales para su maduración.</h2></p></div>
                 <div class="col-7abeja col-sm-4"><img class="img-fluid" src="../images/miel.jpg" alt="una imagen de un frasco de miel que parece muy bueno"></div>
             </div>
                 <!-- panal de abeja -->
                 <h2 class="titulobicho1"> Panales de Abeja</h2>
-                <h2 class="titulobicho2"> Los panales de abeja son la casa de las abejas, de ahi sale la miel por si no sabias, manso dato no?</h2>
+                <h2 class="titulobicho2"> Un panal es una estructura formada por celdillas de cera que comparten paredes en común construida por las abejas melíferas para contener sus larvas y acopiar miel y polen dentro de la colmena.</h2>
             <div class="row justify-content-center" class="pisopag">
                 <div class="col-7abeja col-sm-4">
                     <img class="img-fluid" src="../images/panaldeabejaentero.jpg" alt="una imagen de un panal de abejas desde una vista alejada">
                 </div>
-                <div class="col-5abeja col-sm-4"><p><h2 class="textodescrip1">esta es una foto de un panal que esta fachero ya sabes como sigue el texto </h2></p></div>
+                <div class="col-5abeja col-sm-4"><p><h2 class="textodescrip1">Las diferentes especies del género Apis construyen diferentes tamaños de celdas (sin base de cera estampada), adecuados a sus respectivas castas, lo que es muy útil para distinguir las especies y las razas del género Apis. </h2></p></div>
             </div>
             <div class="sticky"><img class="logow" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1022px-WhatsApp.svg.png" alt="logo de whatsapp"></div>
             <footer>
