--- a/pages/Arañas.html
+++ b/pages/Arañas.html
@@ -53,16 +53,16 @@
                 <div class="row justify-content-center">
                     
                     <h1 class="arañasonly">Las Arañas</h1>
-                    <h2 class="arañasonlydescrip">Las arañas son bichos re facheros que hacen cosas facheras</h2>
+                    <h2 class="arañasonlydescrip">La anatomía de las arañas coincide a grandes rasgos con la de otros arácnidos</h2>
                     <div class="cajaara1">
             <div class="col-6ara col-sm-3"> 
                 <img class="img-fluid" src="../images/arañachiquita.jpg" alt="una imagen de una araña chiquita">
             </div>
             <div class="col-7ara col-sm-3"> 
-                <p><h2 class="arañasonlydescrip">esta araña es chiquita</h2></p>
+                <p><h2 class="arañasonlydescrip">Los saltícidos (Salticidae) son una familia de pequeñas arañas araneomorfas conocidas comúnmente como arañas saltarinas, saltadoras o caza moscas. Con más de 700 géneros descritos y más de 7000 especies descritas.</h2></p>
             </div>
             <div class="col-7ara col-sm-3"> 
-                <p><h2 class="arañasonlydescrip">esta araña es azul</h2></p>
+                <p><h2 class="arañasonlydescrip">Las tarántulas Haplopelma lividum, más conocidas como cobalt blue por su color azul cobalto, son una especie de tarántula nativa de Birmania y Tailandia.Esta araña, muy popular entre los aficionados, es de tamaño mediano con una medida entre patas de aproximadamente 13 cm, es conocida por sus patas de color azules iridiscentes.</h2></p>
             </div>
             <div class="col-6ara col-sm-3"> 
                 <img class="img-fluid" src="../images/tarantulacobalto.jpg" alt="una imagen de una tarantula cobalto una subespecie de las tarantulas">
@@ -77,7 +77,7 @@
                 <iframe width="560px" height="443px" src="https://www.youtube.com/embed/PQbScg3r1oQ" title="Spider Dances For His Life!! | Life Story | BBC" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
                 <div class="col-3ara col-sm-3">
-                <p><h2 class="arañasonlydescrip"> videos de arañas facheros</h2></p>
+                <p><h2 class="arañasonlydescrip1"> Videos sobre los rituales de reproduccion de las arañas (mas que nada demostrando el peligro de estos) y sobre como las arañas construyen su tela de araña</h2></p>
                 </div>
                 <div class="col-2ara col-sm-3">
                 <iframe width="565px" height="443px" src="https://www.youtube.com/embed/zNtSAQHNONo" title="Beautiful Spider Web Build Time-lapse | BBC Earth" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
