--- a/pages/Avispas.html
+++ b/pages/Avispas.html
@@ -52,11 +52,11 @@
                     <div class="row justify-content-center">
                   <!-- avispa hate -->
                   <h1 class="titulobicho1"> Las Avispas</h1>
-                    <h2 class="titulobicho2"> Las avispas son una copia  de las abejas pero mas flacas y aparte son mas agresivas</h2>
+                    <h2 class="titulobicho2"> Los himenópteros constituyen uno de los órdenes más numerosos de insectos, con unas doscientas mil especies.</h2>
                     <div class="avispacaja1">
                   <div class="row justify-content-center">
                     <div class="col-2avispa col-sm-4avs"><iframe width="355" height="531" src="https://www.youtube.com/embed/Me2u4EVOIFk" title="Chasing Out Hornets Trying to Attack Bee #shorts #hornet #beehive" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-                  <div class="col-3avispa col-sm-4avs"><p><h2 class="textodescrip1">aca hay un video de un señor defendiendo sus abejas de avispas que las quieren atacar, hagamos de cuenta la tipicia</h2></p></div>
+                  <div class="col-3avispa col-sm-4avs"><p><h2 class="textodescrip1">las avispas son insector muy territoriales e agresivos a diferencia de las abejas estos pueden picar numerosas veces pero tambien como las abejas estos producen miel</h2></p></div>
                   <div class="col-2avispa col-sm-4avs"><img class="img-fluid" src="../images/avispa.jpg" alt="una imagen de una avispa volando"></div>
             </div>
         </div>
@@ -66,8 +66,8 @@
                                     <div class="col-8avs col-sm-5avs"> 
                                         <iframe width="465" height="443" src="https://www.youtube.com/embed/2zKwRk_uKHY" title="Yellow Jacket MASSIVE Ground Nest STING Wasp Nest Removal ASMR" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                     </div>
-                                      <div class="col-8 col-sm-4avs"> 
-                                        <p><h2 class="textodescrip1">este es un video donde un señor elimina un panal de avispas con una aspiradora, simplemente epico</h2></p>
+                                      <div class="col-8avstxt col-sm-4avs"> 
+                                        <p><h2 class="textodescrip1">Este es un video de un señor eliminando un nido de avispas ubicado bajo tierra ya que las avispas hacen nidos donde quieren, en este video el señor utiliza una aspiradora para eliminar la colmena</h2></p>
                                     </div>
                     </div>
                     <div class="sticky"><img class="logow" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1022px-WhatsApp.svg.png" alt="logo de whatsapp"></div>
