escarabajo_Texto_cambios

--- a/pages/Escarabajos.html
+++ b/pages/Escarabajos.html
@@ -57,15 +57,16 @@
                             <div class="escaracaja">
                                 <div class="row justify-content-center">
                                     <div class="col-1esca col-sm-4esc"><img class="img-fluid" src="../images/escarabajo1.jpg" alt="una foto de un escarabajo"></div>
-                                    <div class="col-1esca col-sm-4esc"><p><h2 class="textodescrip1">testeando limites para ver que tanto cambia todo, hagamos de cuenta la tipicia</h2></p></div>
+                                    <div class="col-1esca col-sm-4esc"><p><h2 class="textodescrip1">Los coleópteros presentan una enorme diversidad morfológica y ocupan virtualmente cualquier hábitat, incluidos los de agua dulce, aunque su presencia en ambientes marinos es mínima.</h2></p></div>
                                     <div class="col-1esca col-sm-4esc"><img class="img-fluid" src="../images/escarabajoflow.jpg" alt="un escarabajo azul fachero"></div>
-                                    <div class="col-1esca col-sm-4esc"><p><h2 class="textodescrip1">idem anterior que tan bien saldra esto, hagamos de cuenta la tipicia</h2></p></div>
+                                    <div class="col-1esca col-sm-4esc"><p><h2 class="textodescrip1">La mayoría de los coleópteros son herbívoros, y muchas especies pueden constituir plagas de los cultivos, siendo las larvas las que causan la mayor parte de los daños agrícolas y forestales.</h2></p></div>
                                     <div class="col-1esca col-sm-4esc"><img class="img-fluid" src="../images/escarabajorojo.jpg" alt="un escarabajo rojo"></div>
                                 </div>
                             </div>
                         </div>
                     <div class="row justify-content-center">
                             <!-- escarabajo video -->
+                                <h2 class="titulobicho1"> Videos de escarabajos</h2>
                                 <div class="col-6esc col-sm-4esc"> 
                                     <iframe width="460" height="315" src="https://www.youtube.com/embed/aSbcBPtuU9I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                 </div>
