--- a/pages/Avispas.html
+++ b/pages/Avispas.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
-        <div class="container-fluid text-center h-100">
+        <div class="container-fluid">
             <div class="background2">
                 <div class="row">
             <header class="header">
