--- a/pages/Arañas.html
+++ b/pages/Arañas.html
@@ -7,10 +7,10 @@
     <meta name="description" content="En esta pagina se habla de arañas, tipos de arañas, contenidos de arañas, videos de arañas, nada de el hombre araña, por ahora,">
     <meta name="keyword" content="arañas, araña, telaraña, tela de araña, tarantulas">
     <title>PreEntrega3PrietoAgustin</title>
-    <link rel="stylesheet" href="./pages/Abejas.html">
-    <link rel="stylesheet" href="./pages/Arañas.html">
-    <link rel="stylesheet" href="./pages/Avispas.html">
-    <link rel="stylesheet" href="./pages/Escarabajos.html">
+    <link rel="stylesheet" href="../pages/Abejas.html">
+    <link rel="stylesheet" href="../pages/Arañas.html">
+    <link rel="stylesheet" href="../pages/Avispas.html">
+    <link rel="stylesheet" href="../pages/Escarabajos.html">
     <link rel="stylesheet" href="../index.html">
 
     
