--- a/pages/Abejas.html
+++ b/pages/Abejas.html
@@ -34,13 +34,13 @@
                             <a class="nav-link" aria-current="page" href="#">Abejas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/Arañas.html">Arañas</a>
+                            <a class="nav-link" href="./pages/Arañas.html">Arañas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/Avispas.html">Avispas</a>
+                            <a class="nav-link" href="./pages/Avispas.html">Avispas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/Escarabajos.html">Escarabajos</a>
+                            <a class="nav-link" href="./pages/Escarabajos.html">Escarabajos</a>
                         </li>
                         </ul>
                     </div>
