--- a/pages/Arañas.html
+++ b/pages/Arañas.html
@@ -7,10 +7,10 @@
     <meta name="description" content="En esta pagina se habla de arañas, tipos de arañas, contenidos de arañas, videos de arañas, nada de el hombre araña, por ahora,">
     <meta name="keyword" content="arañas, araña, telaraña, tela de araña, tarantulas">
     <title>PreEntrega3PrietoAgustin</title>
-    <link rel="stylesheet" href="./pages/Abejas.html">
-    <link rel="stylesheet" href="./pages/Arañas.html">
-    <link rel="stylesheet" href="./pages/Avispas.html">
-    <link rel="stylesheet" href="./pages/Escarabajos.html">
+    <link rel="stylesheet" href="../pages/Abejas.html">
+    <link rel="stylesheet" href="../pages/Arañas.html">
+    <link rel="stylesheet" href="../pages/Avispas.html">
+    <link rel="stylesheet" href="../pages/Escarabajos.html">
     <link rel="stylesheet" href="../index.html">
 
     
@@ -31,16 +31,16 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./pages/Abejas.html">Abejas</a>
+                            <a class="nav-link" aria-current="page" href="/pages/Abejas.html">Abejas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Arañas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/Avispas.html">Avispas</a>
+                            <a class="nav-link" href="/pages/Avispas.html">Avispas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/Escarabajos.html">Escarabajos</a>
+                            <a class="nav-link" href="/pages/Escarabajos.html">Escarabajos</a>
                         </li>
                         </ul>
                     </div>
