--- a/pages/Avispas.html
+++ b/pages/Avispas.html
@@ -67,7 +67,7 @@
                                         <iframe width="465" height="443" src="https://www.youtube.com/embed/2zKwRk_uKHY" title="Yellow Jacket MASSIVE Ground Nest STING Wasp Nest Removal ASMR" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                     </div>
                                       <div class="col-8avstxt col-sm-4avs"> 
-                                        <p><h2 class="textodescrip1">Este es un video de un señor eliminando un nido de avispas ubicado bajo tierra ya que las avispas hacen nidos donde quieren, en este video el señor utiliza una aspiradora para eliminar la colmena</h2></p>
+                                        <p><h2 class="textodescrip1avisp">Este es un video de un señor eliminando un nido de avispas ubicado bajo tierra ya que las avispas hacen nidos donde quieren, en este video el señor utiliza una aspiradora para eliminar la colmena</h2></p>
                                     </div>
                     </div>
                     <div class="sticky"><img class="logow" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1022px-WhatsApp.svg.png" alt="logo de whatsapp"></div>
