--- a/pages/Avispas.html
+++ b/pages/Avispas.html
@@ -7,10 +7,10 @@
     <meta name="description" content="Esta pagina contiene imagenes, videos e informacion de las avispas ya sea lo que no me gusta de estas o porque de todas formas me parecen facheras">
     <meta name="keyword" content="miel, avispa, avispas, colmena, enjambre">
     <title>PreEntrega3PrietoAgustin</title>
-    <link rel="stylesheet" href="../pages/Abejas.html">
-    <link rel="stylesheet" href="../pages/Arañas.html">
-    <link rel="stylesheet" href="../pages/Avispas.html">
-    <link rel="stylesheet" href="../pages/Escarabajos.html">
+    <link rel="stylesheet" href="./pages/Abejas.html">
+    <link rel="stylesheet" href="./pages/Arañas.html">
+    <link rel="stylesheet" href="./pages/Avispas.html">
+    <link rel="stylesheet" href="./pages/Escarabajos.html">
     <link rel="stylesheet" href="../index.html">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -33,13 +33,13 @@
                             <a class="nav-link" aria-current="page" href="./pages/Abejas.html">Abejas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/Arañas.html">Arañas</a>
+                            <a class="nav-link" aria-current="page" href="./pages/Arañas.html">Arañas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Avispas</a>
+                            <a class="nav-link" aria-current="page" href="#">Avispas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/Escarabajos.html">Escarabajos</a>
+                            <a class="nav-link" aria-current="page" href="./pages/Escarabajos.html">Escarabajos</a>
                         </li>
                         </ul>
                     </div>
@@ -56,7 +56,7 @@
                     <div class="avispacaja1">
                   <div class="row justify-content-center">
                     <div class="col-2avispa col-sm-4avs"><iframe width="355" height="531" src="https://www.youtube.com/embed/Me2u4EVOIFk" title="Chasing Out Hornets Trying to Attack Bee #shorts #hornet #beehive" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-                  <div class="col-3avispa col-sm-4avs"><p><h2 class="textodescrip1">las avispas son insector muy territoriales e agresivos a diferencia de las abejas estos pueden picar numerosas veces pero tambien como las abejas estos producen miel</h2></p></div>
+                  <div class="col-3avispa col-sm-4avs"><p><h2 class="textodescrip1avisp">las avispas son insector muy territoriales e agresivos a diferencia de las abejas estos pueden picar numerosas veces pero tambien como las abejas estos producen miel</h2></p></div>
                   <div class="col-2avispa col-sm-4avs"><img class="img-fluid" src="../images/avispa.jpg" alt="una imagen de una avispa volando"></div>
             </div>
         </div>
