--- a/pages/Escarabajos.html
+++ b/pages/Escarabajos.html
@@ -7,10 +7,10 @@
     <meta name="description" content="En esta pagina se hablara de porque los escarabajos son facheros, hay un par de videos en los cuales la tematica principal tiene o involucra escarabajos y tambien tiene un par de imagenes de escarabajos">
     <meta name="keyword" content="escarabajos, escarabajo, pelea, pvp, fachero, bicho">
     <title>PreEntrega3PrietoAgustin</title>
-    <link rel="stylesheet" href="../pages/Abejas.html">
-    <link rel="stylesheet" href="../pages/Arañas.html">
-    <link rel="stylesheet" href="../pages/Avispas.html">
-    <link rel="stylesheet" href="../pages/Escarabajos.html">
+    <link rel="stylesheet" href="./pages/Abejas.html">
+    <link rel="stylesheet" href="./pages/Arañas.html">
+    <link rel="stylesheet" href="./pages/Avispas.html">
+    <link rel="stylesheet" href="./pages/Escarabajos.html">
     <link rel="stylesheet" href="../index.html">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -33,13 +33,13 @@
                                 <a class="nav-link" aria-current="page" href="./pages/Abejas.html">Abejas</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./pages/Arañas.html">Arañas</a>
+                                <a class="nav-link" aria-current="page" href="./pages/Arañas.html">Arañas</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./pages/Avispas.html">Avispas</a>
+                                <a class="nav-link" aria-current="page" href="./pages/Avispas.html">Avispas</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Escarabajos</a>
+                                <a class="nav-link" aria-current="page" href="#">Escarabajos</a>
                             </li>
                         </ul>
                     </div>
