--- a/pages/Avispas.html
+++ b/pages/Avispas.html
@@ -30,16 +30,16 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./pages/Abejas.html">Abejas</a>
+                            <a class="nav-link" aria-current="page" href="/pages/Abejas.html">Abejas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./pages/Arañas.html">Arañas</a>
+                            <a class="nav-link" aria-current="page" href="/pages/Arañas.html">Arañas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="#">Avispas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./pages/Escarabajos.html">Escarabajos</a>
+                            <a class="nav-link" aria-current="page" href="/pages/Escarabajos.html">Escarabajos</a>
                         </li>
                         </ul>
                     </div>
