--- a/pages/Escarabajos.html
+++ b/pages/Escarabajos.html
@@ -30,13 +30,13 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="/pages/Abejas.html">Abejas</a>
+                                <a class="nav-link" aria-current="page" href="../pages/Abejas.html">Abejas</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="/pages/Arañas.html">Arañas</a>
+                                <a class="nav-link" aria-current="page" href=../pages/Arañas.html">Arañas</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="/pages/Avispas.html">Avispas</a>
+                                <a class="nav-link" aria-current="page" href="../pages/Avispas.html">Avispas</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="#">Escarabajos</a>
