--- a/pages/Escarabajos.html
+++ b/pages/Escarabajos.html
@@ -33,7 +33,7 @@
                                 <a class="nav-link" aria-current="page" href="../pages/Abejas.html">Abejas</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href=../pages/Arañas.html">Arañas</a>
+                                <a class="nav-link" aria-current="page" href="../pages/Arañas.html">Arañas</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="../pages/Avispas.html">Avispas</a>
