--- a/pages/Escarabajos.html
+++ b/pages/Escarabajos.html
@@ -56,11 +56,11 @@
                             <h2 class="titulobicho2"> Los escarabajos son omega facheros vienen de todo tipo de colores y tamaños algunos caminan abajo del agua en medio de esta y otros vuelan</h2>
                             <div class="escaracaja">
                                 <div class="row justify-content-center">
-                                    <div class="col-1esca col-sm-4esc"><img class="img-fluid" src="../images/escarabajo1.jpg" alt="una foto de un escarabajo"></div>
+                                    <div class="col-1esca col-sm-4esc"><img class="img-fluid-esca" src="../images/escarabajo1.jpg" alt="una foto de un escarabajo"></div>
                                     <div class="col-1esca col-sm-4esc"><p><h2 class="textodescrip1">Los coleópteros presentan una enorme diversidad morfológica y ocupan virtualmente cualquier hábitat, incluidos los de agua dulce, aunque su presencia en ambientes marinos es mínima.</h2></p></div>
-                                    <div class="col-1esca col-sm-4esc"><img class="img-fluid" src="../images/escarabajoflow.jpg" alt="un escarabajo azul fachero"></div>
+                                    <div class="col-1esca col-sm-4esc"><img class="img-fluid-esca" src="../images/escarabajoflow.jpg" alt="un escarabajo azul fachero"></div>
                                     <div class="col-1esca col-sm-4esc"><p><h2 class="textodescrip1">La mayoría de los coleópteros son herbívoros, y muchas especies pueden constituir plagas de los cultivos, siendo las larvas las que causan la mayor parte de los daños agrícolas y forestales.</h2></p></div>
-                                    <div class="col-1esca col-sm-4esc"><img class="img-fluid" src="../images/escarabajorojo.jpg" alt="un escarabajo rojo"></div>
+                                    <div class="col-1esca col-sm-4esc"><img class="img-fluid-esca" src="../images/escarabajorojo.jpg" alt="un escarabajo rojo"></div>
                                 </div>
                             </div>
                         </div>
