cambios_esteticos_centradodetexto

--- a/pages/Escarabajos.html
+++ b/pages/Escarabajos.html
@@ -57,9 +57,9 @@
                             <div class="escaracaja">
                                 <div class="row justify-content-center">
                                     <div class="col-1esca col-sm-4esc"><img class="img-fluid-esca" src="../images/escarabajo1.jpg" alt="una foto de un escarabajo"></div>
-                                    <div class="col-1esca col-sm-4esc"><p><h2 class="textodescrip1">Los coleópteros presentan una enorme diversidad morfológica y ocupan virtualmente cualquier hábitat, incluidos los de agua dulce, aunque su presencia en ambientes marinos es mínima.</h2></p></div>
+                                    <div class="col-1esca col-sm-4esc"><p><h2 class="textodescrip1esc">Los coleópteros presentan una enorme diversidad morfológica y ocupan virtualmente cualquier hábitat, incluidos los de agua dulce, aunque su presencia en ambientes marinos es mínima.</h2></p></div>
                                     <div class="col-1esca col-sm-4esc"><img class="img-fluid-esca" src="../images/escarabajoflow.jpg" alt="un escarabajo azul fachero"></div>
-                                    <div class="col-1esca col-sm-4esc"><p><h2 class="textodescrip1">La mayoría de los coleópteros son herbívoros, y muchas especies pueden constituir plagas de los cultivos, siendo las larvas las que causan la mayor parte de los daños agrícolas y forestales.</h2></p></div>
+                                    <div class="col-1esca col-sm-4esc"><p><h2 class="textodescrip1esc">La mayoría de los coleópteros son herbívoros, y muchas especies pueden constituir plagas de los cultivos, siendo las larvas las que causan la mayor parte de los daños agrícolas y forestales.</h2></p></div>
                                     <div class="col-1esca col-sm-4esc"><img class="img-fluid-esca" src="../images/escarabajorojo.jpg" alt="un escarabajo rojo"></div>
                                 </div>
                             </div>
