--- a/pages/Abejas.html
+++ b/pages/Abejas.html
@@ -64,7 +64,7 @@
             <h2 class="titulobicho1"> Miel</h2>
             <h2 class="titulobicho2"> La miel es utilizada desde hace miles de años en todo el mundo, ya sea como saborizante de brebajes, alimento o medicamento. </h2>
             <div class="row justify-content-center">
-                <div class="col-5abeja col-sm-4"><p><h2 class="textodescrip1abeja">La miel es un fluido muy dulce y viscoso producido por abejas del género Apis, principalmente la abeja doméstica, a partir del néctar de las flores o de secreciones de partes vivas de plantas o de excreciones de insectos chupadores de plantas (áfidos). Estas sustancias son recogidas por las abejas, luego transformadas al combinarlas con sustancias propias, depositadas, deshidratadas y almacenadas en los panales para su maduración.</h2></p></div>
+                <div class="col-5abeja col-sm-4"><p><h2 class="textodescrip1abeja2">La miel es un fluido muy dulce y viscoso producido por abejas del género Apis, principalmente la abeja doméstica, a partir del néctar de las flores o de secreciones de partes vivas de plantas o de excreciones de insectos chupadores de plantas (áfidos). Estas sustancias son recogidas por las abejas, luego transformadas al combinarlas con sustancias propias, depositadas, deshidratadas y almacenadas en los panales para su maduración.</h2></p></div>
                 <div class="col-7abeja col-sm-4"><img class="img-fluid-abeja" src="../images/miel.jpg" alt="una imagen de un frasco de miel que parece muy bueno"></div>
             </div>
                 <!-- panal de abeja -->
@@ -74,7 +74,7 @@
                 <div class="col-7abeja col-sm-4">
                     <img class="img-fluid-abeja" src="../images/panaldeabejaentero.jpg" alt="una imagen de un panal de abejas desde una vista alejada">
                 </div>
-                <div class="col-5abeja col-sm-4"><p><h2 class="textodescrip1abeja">Las diferentes especies del género Apis construyen diferentes tamaños de celdas (sin base de cera estampada), adecuados a sus respectivas castas, lo que es muy útil para distinguir las especies y las razas del género Apis. </h2></p></div>
+                <div class="col-5abeja col-sm-4"><p><h2 class="textodescrip1abeja2">Las diferentes especies del género Apis construyen diferentes tamaños de celdas (sin base de cera estampada), adecuados a sus respectivas castas, lo que es muy útil para distinguir las especies y las razas del género Apis. </h2></p></div>
             </div>
             
             <footer>
