--- a/pages/Escarabajos.html
+++ b/pages/Escarabajos.html
@@ -82,6 +82,7 @@
             </main> 
         </div>
     <footer>
+        <li class="logocontainerm"><img src="https://images.vexels.com/media/users/3/156307/isolated/preview/45570f652c52ccfad13d9f6b2a432ec6-icono-de-hormiga-simple.png" class="logo" alt="el logo de la pagina, una mantiz"></li>
         <p>todos los derechos reservados</p>
         <ul class="redsocial">
             <li><a href="#"><img class="logocontainer" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1022px-WhatsApp.svg.png" alt="logo whatsapp"></a></li>
